[package]
name = "hal"
version = "0.2.0"
authors = ["Jason Ramapuram <jason.ramapuram@gmail.com>"]

[dependencies]
rustc-serialize = "0.3.19"
rand = "0.3.14"
csv = "0.14.4"
num = "0.1.31"
conv = "0.3.3"
tar = "0.4.5"
flate2 = "0.2.13"
itertools = "0.4.12"
statistical = "0.1.1"
arrayfire = { path ="arrayfire-rust" }

[dependencies.hyper]
version = "0.9.6"
default-features = false

[lib]
name = "hal"
path = "src/lib.rs"
plugin = true

[[example]]
name = "autoencoder"
path = "examples/autoencoder.rs"

[[example]]
name = "test"
path = "examples/test.rs"
